fix: Fixed spacing under search results overlays

--- a/src/app/overlay/search-results/search-results.component.scss
+++ b/src/app/overlay/search-results/search-results.component.scss
@@ -18,7 +18,7 @@
 }
 
 .results-list-handset {
-  height: calc(100vh - 174px);
+  height: calc(100vh - 133px);
   max-width: 100vw;
 }
 
